<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <ImageView
        android:id="@+id/img_spend_list_icn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/img_spend_list_icn"
        android:src="@drawable/icn_food"
        app:layout_constraintBottom_toTopOf="@+id/line_spend_list"
        app:layout_constraintEnd_toStartOf="@+id/tv_spend_list_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_spend_list_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9.2dp"
        android:text="@string/tv_spend_list_category"
        android:textColor="#191919"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tv_spend_list_content"
        app:layout_constraintStart_toEndOf="@id/img_spend_list_icn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_spend_list_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_spend_list_content"
        android:textColor="#353535"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/line_spend_list"
        app:layout_constraintStart_toStartOf="@id/tv_spend_list_category"
        app:layout_constraintTop_toBottomOf="@id/tv_spend_list_category" />

    <TextView
        android:id="@+id/tv_spend_list_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/tv_spend_list_money"
        android:textColor="#db2f90"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_spend_list_content"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/line_spend_list"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ededed"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>