<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_green">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateresult_title"
        android:textStyle="normal"
        android:textSize="19sp"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="14dp"/>

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:src="@drawable/icn_record_back"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/two_angle_round_layout"
        android:layout_marginTop="16dp">

        <!--월/일 표시 부분-->
        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#191919"
            android:layout_marginTop="38dp"
            app:layout_constraintStart_toStartOf="@id/view_bar_today"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/month_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#191919"
            android:layout_marginTop="38dp"
            android:text="@string/month_unit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/month"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#191919"
            android:layout_marginTop="38dp"
            android:text="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/month_unit"/>

        <TextView
            android:id="@+id/date_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#191919"
            android:layout_marginTop="38dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/date"
            android:text="@string/date_unit"/>

        <!--금액 표시 부분-->
        <TextView
            android:id="@+id/money_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_unit"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#2fdb7a"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/recycler_spend_list"
            android:layout_marginTop="38dp"/>

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#2fdb7a"
            android:text="4000"
            app:layout_constraintTop_toTopOf="@id/month_unit"
            app:layout_constraintEnd_toStartOf="@id/money_unit"/>

        <TextView
            android:id="@+id/saved_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="#353535"
            android:text="@string/saved_money"
            app:layout_constraintBottom_toBottomOf="@id/money"
            app:layout_constraintEnd_toStartOf="@id/money"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="2dp"/>

        <!--프로그래스 바 부분-->

        <View
            android:id="@+id/view_bar_today"
            android:layout_width="48dp"
            android:layout_height="444dp"
            android:background="@drawable/round_corners"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recycler_spend_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/month_unit" />

        <ProgressBar
            android:id="@+id/progressBar_today"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="429.2dp"
            android:layout_height="15.7dp"
            android:elevation="8dp"
            android:max="100"
            android:progress="80"
            android:progressDrawable="@drawable/gradation_bar"
            android:rotation="270"
            android:translationZ="8dp"
            app:layout_constraintBottom_toBottomOf="@id/view_bar_today"
            app:layout_constraintEnd_toEndOf="@+id/view_bar_today"
            app:layout_constraintStart_toStartOf="@id/view_bar_today"
            app:layout_constraintTop_toTopOf="@+id/view_bar_today" />

        <!--프로그래스 바 아이콘-->
        <ImageView
            android:contentDescription=""
            android:id="@+id/img_progressBar_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:src="@drawable/icn_bar_svg"
            android:translationZ="16dp"
            android:layout_marginBottom="330dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/view_bar_today"
            app:layout_constraintStart_toStartOf="@+id/view_bar_today" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_spend_list"
            android:layout_width="271.2dp"
            android:layout_height="444dp"
            android:background="@drawable/round_corners"
            android:elevation="8dp"
            android:padding="14.1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_bar_today"
            app:layout_constraintTop_toTopOf="@id/month_unit"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/okay"
            android:textColor="@color/deep_green"
            android:textSize="19sp"
            android:background="@color/light_green"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>